--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
-    "slugify": "^1.6.6",
+    "slugify": "^1.6.6"
+  },
+  "devDependencies": {
+    "esbuild": "^0.25.10",
     "typescript": "^5.9.3"
   }
 }
