--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "build": "esbuild contents.ts --bundle --target=es6 --global-name=makeToC --footer:js=\"makeToC = makeToC.default;\" --outfile=contents.bundle.js"
+  },
   "dependencies": {
     "slugify": "^1.6.6"
   },
