--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,11 +7,7 @@
 		"strict": true,
 		"forceConsistentCasingInFileNames": true,
 		"esModuleInterop": true,
-		"module": "esnext",
-		"moduleResolution": "bundler",
-		"resolveJsonModule": true,
-		"isolatedModules": true,
-		"jsx": "preserve",
+		"module": "none",
 		"incremental": true,
 		"typeRoots": [
 			"./node_modules/@types",
