Add tsc watch task

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,15 +2,25 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
-			"type": "npm",
-			"script": "build",
+			"type": "shell",
+			"command": "npx tsc",
+			"problemMatcher": [
+				"$tsc"
+			],
+			"group": "build",
+			"label": "tsc: build - tsconfig.json"
+		},
+		{
+			"type": "shell",
+			"command": "npx tsc --watch",
+			"problemMatcher": [
+				"$tsc-watch"
+			],
 			"group": {
 				"kind": "build",
-				"isDefault": true,
+				"isDefault": true
 			},
-			"problemMatcher": [],
-			"label": "npm: build",
-			"detail": "npx tsc"
+			"label": "tsc: watch - tsconfig.json"
 		},
 	]
 }
